# DCSC_Robots

./: .gitignore  .gitmodules  COPYING  LICENSE  README.md  formation_test1.bag  rospub tops
create_description_basic/: CMakeLists.txt  package.xml
create_gazebo/: 1Robot  CMakeLists.txt  package.xml
create_gazebo/launch/: gazebo_create.launch  reroutes.launch
create_gazebo/src/: gazebo_spawn_script  reroute.py  robot_offsets
dcsc_consensus/: CMakeLists.txt  CMakeLists.txt~  package.xml
dcsc_consensus/launch/: cool_control.launch  cool_control_WiFi.launch  form_control.launch  form_control_no_mpc.launch  formation.launch  formation_WiFi.launch  test.launch  test.launch~  test_bots.launch
dcsc_consensus/msg/: bot_data_msg.msg
dcsc_consensus/scripts/: Bot_Net_ROS.py  Leader_class.py  cool_control.py  cool_control_WiFi.py  create_control_test.py  flock_control.py  flocking.py  form_control.py  form_control_no_mpc.py  formation.py  formation_WiFi.py  talker.py  tinyROS.py  uni_conv_class.py
dcsc_consensus/src/: consensus.py  consensus.py~
dcsc_create/dcsc_create/: package.xml
dcsc_create/formation/: CMakeLists.txt  CMakeLists.txt~  package.xml
dcsc_create/localization/: CMakeLists.txt  CMakeLists.txt~  (+1 more)
dcsc_sphero/dcsc_sphero/: CMakeLists.h  CMakeLists.h~  package.xml  package.xml~
dcsc_sphero/tracking_sphero/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
dcsc_sphero/tracking_sphero/launch/: sphero_tracking.launch  sphero_tracking.launch~
dcsc_sphero/tracking_sphero/src/: mover.py~  tracking.py~  tracking_sphero.py  tracking_sphero.py~
(+16 files in other folders)
