<package>
	<name>dcsc_sphero</name>
	<version>0.0.1</version>
	<description>Catkin metapackage for the dcsc_sphero stack</description>
	<maintainer email="j.f.dewinkel@student.tudelft.nl">Frank de Winkel</maintainer>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>tracking_sphero</run_depend>

	<export>
		<metapackage/>
	</export>
</package>
